fix: Slightly reorder second network row to reduce overlaps

--- a/src/components/common/Networks/styles.module.css
+++ b/src/components/common/Networks/styles.module.css
@@ -30,7 +30,7 @@
 }
 
 .slider {
-  animation: slide 60s linear infinite;
+  animation: slide 59s linear infinite;
 }
 
 .sliderReverse {
